--- a/i18n/en.json
+++ b/i18n/en.json
@@ -6,5 +6,7 @@
 	"newsignuppage-recruited": "recruited [$1 $2]",
 	"shoutwiki-loginform-tos": "I am over 13 years of age and I have read, understood and agree to be bound by the [http://www.shoutwiki.com/wiki/Terms_of_use Terms of Service] and [http://www.shoutwiki.com/wiki/Privacy_policy Privacy Policy]",
 	"shoutwiki-must-accept-tos": "You must accept the site's Terms of Service in order to be able to create an account!",
+	"shoutwiki-anonedit-tos": "I am over 13 years of age and I have read, understood and agree to be bound by the [http://www.shoutwiki.com/wiki/Terms_of_use Terms of Service] and [http://www.shoutwiki.com/wiki/Privacy_policy Privacy Policy]",
+	"shoutwiki-anonedit-must-accept-tos": "You must accept the site's Terms of Service in order to edit!",
 	"right-bypasstoscheck": "Create new accounts without accepting the site's Terms of Service"
 }
